<resources>
    <string name="fragment_list_action_bar_title">Accounts</string>
    <string name="fragment_list_menu_add_password_label">Add password</string>
    <string name="fragment_list_menu_setting_label">Setting</string>

    <!-- Add password screen -->
    <string name="fragment_ap_action_bar_title">Create Password</string>
    <string name="fragment_ap_account_name_hint">Account Name</string>
    <string name="fragment_ap_username_hint">Username</string>
    <string name="fragment_ap_password_hint">Password</string>
    <string name="fragment_ap_hint">Hint</string>
    <string name="fragment_ap_btn_add_text">Add</string>

    <!-- Detail screen -->
    <string name="fragment_detail_action_bar_title">Detail</string>
    <string name="fragment_detail_btn_update">Update</string>

    <!-- Menu -->
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <!-- Setting -->
    <string name="setting_title">Setting</string>
    <string name="setting_security_check_title">Enable security check</string>
    <string name="setting_security_check_description">You will be asked inputting primary password if you want to view password.</string>
    <string name="setting_change_text">Change</string>
    <string name="setting_save_password_text">Save</string>
    <string name="setting_primary_password_text">Primary Password</string>

    <!-- Dialog -->
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Confirm Dialog -->
    <string name="dialog_confirm_primary_password_hint">Primary Password</string>
    <string name="dialog_confirm_label">Please input your primary password</string>
    <string name="dialog_wrong_password_message">Wrong password</string>
    <string name="setting_finger_print_check_title">Enable finger print</string>
    <string name="setting_finger_print_check_description">You will be asked to authenticate by finger print when you want to view password.</string>

</resources>
