<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_content_left_right">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_security_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_information_background"
        android:padding="@dimen/setting_box_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_security_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_security_check_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/setting_security_check_title"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintBottom_toBottomOf="@+id/switch_security_check"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/switch_security_check"
            app:layout_constraintTop_toTopOf="@+id/switch_security_check" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_security_check_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_item_left_right"
            android:text="@string/setting_security_check_description"
            android:textSize="@dimen/text_size_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_security_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_primary_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_between_inputs"
        android:background="@drawable/border_information_background"
        android:padding="@dimen/setting_box_padding"
        app:layout_constraintTop_toBottomOf="@+id/cl_security_check">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_primary_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/setting_primary_password_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_primary_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="30"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_change_password"
            style="@style/ClickableText"
            android:layout_width="@dimen/setting_update_text_width"
            android:layout_height="@dimen/setting_update_text_height"
            android:layout_marginEnd="@dimen/setting_update_text_margin_right"
            android:text="@string/setting_change_text"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/input_primary_password"
            app:layout_constraintRight_toRightOf="@+id/input_primary_password"
            app:layout_constraintTop_toTopOf="@+id/input_primary_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
